# Ledger

./: README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: routes.py
backend/app/api/v1/endpoints/: auth.py  expenses.py  ledgers.py  settlements.py  users.py
backend/app/core/: config.py
backend/app/domain/: models.py  repositories.py  unit_of_work.py
backend/app/domain/services/: __init__.py  auth_service.py  expense_service.py  ledger_service.py  settlement_service.py
backend/app/infrastructure/: db.py
backend/app/schemas/: expense.py  ledger.py  settlement.py  token.py  user.py
backend/app/utils/: security.py
docs/issues/: 0001-first-pass-ledger.md
frontend/: package.json  tsconfig.app.json  tsconfig.json
frontend/src/: app.d.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/register/: +page.svelte
frontend/src/routes/expenses/: +page.svelte
frontend/src/routes/ledgers/: +page.svelte
frontend/src/routes/settlements/: +page.svelte
