[project]
name = "ledger-backend"
version = "0.1.0"
description = "FastAPI backend for Ledger expense tracking"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Ledger Team"}]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-dotenv",
  "pydantic[email]",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
